# DuckyFence

./: BOM_AMAZON.xlsx  BOM_PCB.xlsx  DEVLOG.md  PickAndPlace.xlsx  README.md
arduino/: arduino_uart_logger.c  badusb_detector.ino  hid_keystroke_relay.ino  usb_alarm.ino  usb_class_logger.ino  usb_descriptor_dump.ino  usb_forward_uart.ino  usb_sniff_to_sd.ino  usb_sniffer.ino  usb_sniffer_plus.ino
firmware/: CMakeLists.txt  blink.c  gpio_pulse.c  uart_logger.c  usb_detect.c  usb_filter.c  usb_neopixel_status.c  usb_passthrough.c
python/: alert_on_badusb.py  live_usb_monitor.py  log_serial.py  usb_audio_alert.py  usb_badusb_logger_gui.py  usb_command_forwarder.py  usb_diff_log.py  usb_json_logger.py  usb_log_to_csv.py  usb_vid_pid_lookup.py  vid_pid_parser.py
